corrected margins and alignments

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: space-between;
     font-family: 'Inter', sans-serif;
-    margin: 0 5rem;
+    max-width: 80%;
+    margin: 0 auto;
     padding: 1rem;
 
     &__img {
@@ -44,7 +45,8 @@
 
 .main {
     font-family: 'Inter', sans-serif;
-    margin: 0 5em;
+    max-width: 80%;
+    margin: 0 auto;
 
     &__section-texts {
         margin: 8rem 0 3rem 0;
@@ -53,7 +55,7 @@
 
     &__texts {
         margin-bottom: 2rem;
-        width: 45%;
+        width: 55%;
     }
 
     &__title {
@@ -110,16 +112,23 @@
         }
     }
 
+    &__allcards {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
     &__smallcards {
         display: flex;
-        gap: 3rem;
+        justify-content: space-between;
         margin: 7rem 0 5rem 0;
-        justify-content: center;
+        width: 100%;
 
         .smallcard {
             display: flex;
             flex-direction: column;
-            max-width: 20%;
+            width: 26%;
             padding: 1rem;
             border: 1px solid rgba(128, 128, 128, 0.18);
             border-radius: 10px;
@@ -153,16 +162,8 @@
 
     &__bigcards {
         display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        align-items: center;
-        
-        .twocards {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            gap: 2rem;
-        }
+        flex-wrap: wrap;
+        justify-content: space-between;
         
         .bigcard {
             background-color: rgba(128, 128, 128, 0.151);
@@ -170,7 +171,12 @@
             border-radius: 10px;
             display: flex;
             flex-direction: column;
-            width: 30%;
+            width: 40%;
+
+            &:last-child {
+                width: 100%;
+                margin-top: 2.5rem;
+            }
 
             &__title {
                 font-weight: bold;
@@ -185,7 +191,7 @@
 
             &__image {
                 width: 80%;
-                height: 435px;
+                height: 450px;
                 align-self: center;
                 margin-top: 2em;
             }
@@ -199,6 +205,7 @@
             }
             
         }
+
     }
 
     
